--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "private": true,
     "scripts": {
         "dev": "vite",
+        "build": "vite build",
         "development": "npm run build",
         "heroku-postbuild": "npm run build"
     },
