--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,37 @@
 {
-    "name": "laravel/laravel",
+    "name": "hexlet/code",
     "type": "project",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "require": {
-        "php": "^8.0.2",
-        "guzzlehttp/guzzle": "^7.2",
-        "laravel/framework": "^9.19",
-        "laravel/sanctum": "^3.0",
-        "laravel/tinker": "^2.7"
+        "php": "8.1.*",
+        "guzzlehttp/guzzle": "^7.5.0",
+        "imangazaliev/didom": "^2.0.0",
+        "laracasts/flash": "^3.2.1",
+        "laravel/framework": "^9.31.0",
+        "laravel/sanctum": "^3.0.1",
+        "laravel/tinker": "^2.7.2",
+        "laravel/ui": "^4.0.2",
+        "laravelcollective/html": "^6.3.0",
+        "symfony/process": "^6.1.3",
+        "twbs/bootstrap": "^5.2.1",
+        "ext-pdo": "*"
     },
     "require-dev": {
-        "fakerphp/faker": "^1.9.1",
-        "laravel/pint": "^1.0",
-        "laravel/sail": "^1.0.1",
-        "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^6.1",
-        "phpunit/phpunit": "^9.5.10",
-        "spatie/laravel-ignition": "^1.0"
+        "barryvdh/laravel-ide-helper": "^2.12.3",
+        "fakerphp/faker": "^1.20.0",
+        "laravel/pint": "^1.2.0",
+        "laravel/sail": "^1.16.0",
+        "mockery/mockery": "^1.5.1",
+        "nunomaduro/collision": "^6.3.0",
+        "phpunit/phpunit": "^9.5.24",
+        "roave/security-advisories": "dev-latest",
+        "spatie/laravel-ignition": "^1.5.0",
+        "squizlabs/php_codesniffer": "^3.7.1"
     },
     "autoload": {
         "psr-4": {
@@ -33,6 +46,9 @@
         }
     },
     "scripts": {
+        "phpcs": "phpcs",
+        "phpcbf": "phpcbf",
+        "test": "phpunit",
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
